sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:12: error: illegal character '\u00b2'
    if (((getCouleurJoueur(n,0))-trou)? > abs((getCouleurJoueur(n,0))-trou)?) {
                                      ^NaiveBaseball:12: error: illegal character '\u00b2'
    if (((getCouleurJoueur(n,0))-trou)? > abs((getCouleurJoueur(n,0))-trou)?) {
                                                                           ^NaiveBaseball:12: error: ')' expected but something found.
    if (((getCouleurJoueur(n,0))-trou)? > abs((getCouleurJoueur(n,0))-trou)?) {
                                      ^NaiveBaseball:12: error: illegal start of simple expression
    if (((getCouleurJoueur(n,0))-trou)? > abs((getCouleurJoueur(n,0))-trou)?) {
                                                                           ^